<resources>
    <string name="app_name">Carwash App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nieuweCarwash_button">Nieuwe carwash</string>
    <string name="nav_home">Home</string>
    <string name="nav_zoek">Zoeken</string>
    <string name="nav_profile">Profiel</string>

    <string name="action_sign_in">Aanmelden</string>
    <string name="action_register">Registreren</string>
    <string name="action_forgot_password">Wachtwoord Vergeten?</string>

    <string name="label_tarief">€ %s</string>
    <string name="label_auto">%s %s</string>
    <string name="label_stad">Regio %s</string>
    <string name="label_tijdstip">%s - %s</string>

    <string name="hint_voornaam">Voornaam</string>
    <string name="hint_familienaam">Familienaam</string>
    <string name="hint_email">Email</string>
    <string name="hint_telnr">Telefoon Nr.</string>
    <string name="hint_straatnaam">Straatnaam</string>
    <string name="hint_huisnr">Huisnummer</string>
    <string name="hint_postcode">Postcode</string>
    <string name="hint_stad">Stad</string>
    <string name="hint_land">Land</string>
    <string name="hint_wachtwoord">Wachtwoord</string>
    <string name="hint_wachtwoord_herhalen">Wachtwoord Herhalen</string>

    <string name="hint_auto">Uw auto</string>
    <string name="hint_tarief">Tarief</string>
    <string name="hint_datum">Selecteer een datum</string>
    <string name="hint_beginTijd">Van</string>
    <string name="hint_eindTijd">Tot</string>
    <string name="hint_uitleg">Extra uitleg</string>
    <string name="hint_bevestig">Plaatsen</string>

    <string name="desc_verwijder_foto">Verwijder Foto</string>

    <string name="title_aanmelden">Aanmelden…</string>
    <string name="title_registreren">Registreren…</string>
    <string name="title_afmelden">Afmelden</string>
    <string name="title_afspraken">Overzicht afspraken</string>
    <string name="title_alle_carwashes">Alle carwashes</string>
    <string name="title_carwash_details">Details van de carwash:</string>
    <string name="title_auto">Auto:</string>
    <string name="title_locatie">Locatie:</string>
    <string name="title_datum">Datum:</string>
    <string name="title_tijdstip">Tijdstip:</string>
    <string name="vraag_afspraak">Wenst u voor deze carwash een afspraak te maken en hier € %s mee te verdienen?</string>
    <string name="title_afspraak_details">Details van uw afspraak:</string>
    <string name="title_tarief">Tarief:</string>

    <string name="welcome">"Welkom!"</string>
    <string name="nieuweCarwash">Nieuwe carwash toevoegen</string>
    <string name="afspraak_maken">Afspraak maken</string>
    <string name="annuleren">Annuleren</string>
    <string name="sluiten">Sluiten</string>
    <string name="verwijderen">Verwijderen</string>

    <string name="header_afspraken_komende">Komende afspraken</string>
    <string name="header_afspraken_historiek">Oude afspraken</string>
    <string name="header_eigen_carwashes">Mijn carwashes</string>

    <!-- Loading -->
    <string name="title_error_loading">OEPS! Er ging iets mis</string>
    <string name="loading_motd">Alles wordt klaar gezet voor gebruik</string>
    <string name="action_error_loading">App Sluiten</string>
    <string name="error_loading_nonetwork">
        Het lukte niet om de gegevens van de server te halen.\n
        Omdat het de eerste keer is dat je de app gebruik, kunnen we hierdoor geen functionaliteit aanbieden.\n
        Probeer het later eens opnieuw!
    </string>

    <!-- VALIDATION ERROR -->
    <string name="error_empty">Dit veld is verplicht</string>
    <string name="error_invalid_email">Geef een geldige email in</string>
    <string name="error_invalid_telnr">Geef een geldige telefoonnummer in</string>
    <string name="error_invalid_password">Het wachtwoord moet minstens 6 tekens lang zijn</string>
    <string name="error_invalid_passwordConfirm">De ingegeven wachtwoorden komen niet overeen</string>
    <string name="error_login_failed">Aanmelden mislukt, kijk email en wachtwoord na</string>
    <string name="error_register_failed">Registreren mislukt, kijk de ingevulde gegevens na</string>

    <!-- GENERIC HTTP ERROR -->
    <string name="httperror_400">Er liep iets fout bij verzenden van gegevens</string>
    <string name="httperror_401">Je hebt geen toegang tot dit onderdeel</string>
    <string name="httperror_404">De opgevraagde gegevens werden niet gevonden</string>
    <string name="httperror_504">De server reageerde niet tijdig, probeer opnieuw</string>

</resources>
