<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="be.hogent.yasminedewinne.carwashapp.viewmodels.AfspraakDetailsDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.afspraak.AfspraakDetailsDialogFragment">

        <TextView
            android:id="@+id/txt_carwash_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_afspraak_details"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_auto"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_carwash_details" />

        <TextView
            android:id="@+id/txt_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.format(@string/label_auto, viewModel.afspraak.carwashMerk, viewModel.afspraak.carwashAuto)}"
            app:layout_constraintStart_toEndOf="@+id/txt_title_auto"
            app:layout_constraintTop_toTopOf="@id/txt_title_auto"
            tools:text="BMW X1"/>

        <TextView
            android:id="@+id/txt_title_tarief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_tarief"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_auto" />

        <TextView
            android:id="@+id/txt_tarief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.format(@string/label_tarief, viewModel.afspraak.carwashTarief)}"
            app:layout_constraintStart_toEndOf="@id/txt_title_tarief"
            app:layout_constraintTop_toTopOf="@id/txt_title_tarief"
            tools:text="€ 12"/>

        <TextView
            android:id="@+id/txt_title_locatie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_locatie"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_tarief" />

        <TextView
            android:id="@+id/txt_locatie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.afspraak.carwashAdres}"
            app:layout_constraintStart_toEndOf="@id/txt_title_locatie"
            app:layout_constraintTop_toTopOf="@id/txt_title_locatie"
            tools:text="Regio Aalst"/>

        <TextView
            android:id="@+id/txt_title_datum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_datum"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_locatie" />

        <TextView
            android:id="@+id/txt_datum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:date="@{viewModel.afspraak.carwashDatum}"
            app:layout_constraintStart_toEndOf="@id/txt_title_datum"
            app:layout_constraintTop_toTopOf="@id/txt_title_datum"
            tools:text="01/01/2020"/>

        <TextView
            android:id="@+id/txt_title_tijdstip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_tijdstip"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_datum" />

        <TextView
            android:id="@+id/txt_tijdstip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.format(@string/label_tijdstip, viewModel.afspraak.carwashBeginTijd, viewModel.afspraak.carwashEindTijd)}"
            app:layout_constraintStart_toEndOf="@id/txt_title_tijdstip"
            app:layout_constraintTop_toTopOf="@id/txt_title_tijdstip"
            tools:text="14:00 - 16:00"/>

        <Button
            android:id="@+id/btn_verwijderen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/verwijderen"
            app:layout_constraintEnd_toStartOf="@id/btn_close"
            app:layout_constraintTop_toBottomOf="@id/txt_title_tijdstip" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/sluiten"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_verwijderen" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>