<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="be.hogent.yasminedewinne.carwashapp.viewmodels.CarwashDetailsDialogViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.CarwashDetailsDialogFragment">


    <TextView
        android:id="@+id/txt_carwash_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_carwash_details"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_auto"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_carwash_details" />

    <TextView
        android:id="@+id/txt_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@{String.format(@string/label_auto, viewModel.carwash.autoMerk, viewModel.carwash.autoNaam)}"
        app:layout_constraintStart_toEndOf="@+id/txt_title_auto"
        app:layout_constraintTop_toTopOf="@id/txt_title_auto" />

    <TextView
        android:id="@+id/txt_title_locatie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_locatie"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_auto" />

    <TextView
        android:id="@+id/txt_locatie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@{String.format(@string/label_stad, viewModel.carwash.gebruikerStad)}"
        app:layout_constraintStart_toEndOf="@id/txt_title_locatie"
        app:layout_constraintTop_toTopOf="@id/txt_title_locatie" />

    <TextView
        android:id="@+id/txt_title_datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_datum"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_locatie" />

    <TextView
        android:id="@+id/txt_datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:date="@{viewModel.carwash.datum}"
        app:layout_constraintStart_toEndOf="@id/txt_title_datum"
        app:layout_constraintTop_toTopOf="@id/txt_title_datum" />

    <TextView
        android:id="@+id/txt_title_tijdstip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_tijdstip"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_datum" />

    <TextView
        android:id="@+id/txt_tijdstip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@{String.format(@string/label_tijdstip, viewModel.carwash.beginTijd, viewModel.carwash.eindTijd)}"
        app:layout_constraintStart_toEndOf="@id/txt_title_tijdstip"
        app:layout_constraintTop_toTopOf="@id/txt_title_tijdstip" />

    <TextView
        android:id="@+id/txt_vraag_afspraak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@{String.format(@string/vraag_afspraak, viewModel.carwash.tarief)}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_tijdstip" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>